landing page base

--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>DF Turístico</title>
+        <title>DF Checkpoints</title>
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     </head>
     <body>
-
+        <div id="cabeçalho">
+            <div id="logo">
+                <img src="img/brasao-do-distrito-federal.png" alt="logo do Distrito Federal" width="100" height="100">
+            </div>
+            <a href="index.html">Início</a> |
+            <a href="pontos_turisticos.html">Pontos Turísticos</a> |
+            <a href="contato.html">Contato</a>
+        </div>
+        <div id="pagina-inicial">
+        <h1>Bem-vindo ao DF Checkpoints</h1>
+        <p>Explore os principais pontos turísticos do Distrito Federal.</p>    
+        </div>
+        
     </body>
 </html>
