--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
     <body>
         <div id="cabeçalho">
             <div id="logo">
-                <img src="img/brasao-do-distrito-federal.png" alt="logo do Distrito Federal" width="100" height="100">
+                <img src="img/brasao-do-distrito-federal.png"
+                    alt="logo do Distrito Federal" width="100" height="100">
             </div>
             <a href="index.html">Início</a> |
             <a href="pontos_turisticos.html">Pontos Turísticos</a> |
             <a href="contato.html">Contato</a>
         </div>
         <div id="pagina-inicial">
-        <h1>Bem-vindo ao DF Checkpoints</h1>
-        <p>Explore os principais pontos turísticos do Distrito Federal.</p>    
+            <h1>Bem-vindo ao DF Checkpoints</h1>
+            <p>Explore os principais pontos turísticos do Distrito Federal.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos
+                neque accusantium aut officiis! Nihil sint non illo qui,
+                voluptate itaque quidem! Veritatis dignissimos eum, repudiandae
+                quo iusto nobis similique. Molestiae.</p>
         </div>
-        
+
     </body>
 </html>
