--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div id="pagina-inicial">
             <h1>Bem-vindo ao DF Checkpoints</h1>
             <p>Explore os principais pontos turísticos do Distrito Federal.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis animi expedita dignissimos minus quas quidem, illo ullam sapiente sunt adipisci suscipit veritatis mollitia saepe molestiae aliquid culpa maxime impedit perferendis!</p>
 
     </body>
 </html>
