cria pagina rafael

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a href="index.html">Início</a> |
             <a href="pontos_turisticos.html">Pontos Turísticos</a> |
             <a href="contato.html">Contato</a>
+            <a href="pagina_rafael.html"></a>
         </div>
         <div id="pagina-inicial">
             <h1>Bem-vindo ao DF Checkpoints</h1>
