--- a/planetario.html
+++ b/planetario.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planetário</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/planetario.css">
 </head>
 
 <body>
 
     <h1>Planetário de Brasília</h1>
 
-    <img src="imagens/planetario1.webp" alt="Planetário de Brasília" class="imagem-principal">
+    <img src="img/img_planet/planetario1.webp" alt="Planetário de Brasília" class="imagem-principal">
 
     <p>
 
