iplementa o cabeçalho em planetario e nicolandia

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>DF Checkpoints</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/home.css">
         <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     </head>
     <body>
@@ -13,15 +13,16 @@
                 <img src="img/brasao-do-distrito-federal.png"
                     alt="logo do Distrito Federal" width="100" height="100">
             </div>
-            <a href="index.html">Início</a> |
-            <a href="pontos_turisticos.html">Pontos Turísticos</a> |
-            <a href="contato.html">Contato</a>
-            <a href="pagina_rafael.html"></a>
+            <a href="home.html">Início</a>|
+            <a href="pontos_turisticos.html">Pontos Turísticos</a>|
+            <a href="contato.html">Contato</a>|
+            <a href="nicolandia.html">Nicolândia</a>|
+            <a href="planetario.html">Planetário</a>|
+            <a href="zoologico.html">Zoológico</a>|
         </div>
         <div id="pagina-inicial">
             <h1>Bem-vindo ao DF Checkpoints</h1>
+            <br>
             <p>Explore os principais pontos turísticos do Distrito Federal.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis animi expedita dignissimos minus quas quidem, illo ullam sapiente sunt adipisci suscipit veritatis mollitia saepe molestiae aliquid culpa maxime impedit perferendis!</p>
-
-    </body>
-</html>
+        </body>
+    </html>
