--- a/nicolandia.html
+++ b/nicolandia.html
@@ -3,13 +3,22 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>DF Checkpoints - Nicolândia</title>
         <link rel="stylesheet" href="css/nicolandia.css">
     </head>
     <body>
-
-        <h2 class="Header">Home | Zoológico | Planetário | Nicolândia | Ponte
-            JK</h2>
+        <div id="cabeçalho">
+            <div id="logo">
+                <img src="img/brasao-do-distrito-federal.png"
+                    alt="logo do Distrito Federal" width="100" height="100">
+            </div>
+            <a href="home.html">Início</a> |
+            <a href="pontos_turisticos.html">Pontos Turísticos</a> |
+            <a href="contato.html">Contato</a> |
+            <a href="nicolandia.html">Nicolândia</a> |
+            <a href="planetario.html">Planetário</a> |
+            <a href="zoologico.html">Zoológico</a> |
+        </div>
 
         <div class="Bloco" align="center">
             <br>
@@ -23,7 +32,7 @@
 
         <!--PRIMEIRA ATRAÇÃO-->
 
-        <div align="center">
+        <div class="Bloco" align="center">
             <img class="Imagens" src="img/img_nicolandia/360.webp"
                 alt="Atração 360" align="left">
             <br>
@@ -33,7 +42,7 @@
 
         <!--SEGUNDA ATRAÇÃO-->
 
-        <div align="center">
+        <div class="Bloco" align="center">
             <img class="Imagens" src="img/img_nicolandia/KABUM.webp"
                 alt="Atração KABUM" align="right">
             <br>
@@ -43,7 +52,7 @@
 
         <!--TERCEIRA ATRAÇÃO-->
 
-        <div align="center">
+        <div class="Bloco" align="center">
             <img class="Imagens" src="img/img_nicolandia/SPOOK.webp"
                 alt="Atração SPOOK" align="left">
             <br>
@@ -54,7 +63,7 @@
 
         <!--QUARTA ATRAÇÃO-->
 
-        <div align="center">
+        <div class="Bloco" align="center">
             <img class="Imagens" src="img/img_nicolandia/colossus-loop.webp"
                 alt="Atração Colossu's Loop" align="right">
             <br>
@@ -64,7 +73,7 @@
 
         <!--QUINTA ATRAÇÃO-->
 
-        <div align="center">
+        <div class="Bloco" align="center">
             <img class="Imagens" src="img/img_nicolandia/toboga-noite.webp"
                 alt="Atração Tobogã" align="left">
             <br>
