--- a/planetario.html
+++ b/planetario.html
@@ -9,10 +9,21 @@
 </head>
 
 <body>
+<div id="cabeçalho">
+            <div id="logo">
+                <img src="img/brasao-do-distrito-federal.png"
+                    alt="logo do Distrito Federal" width="100" height="100">
+            </div>
+            <a href="home.html  ">Início</a> |
+            <a href="pontos_turisticos.html">Pontos Turísticos</a> |
+            <a href="contato.html">Contato</a> |
+            <a href="nicolandia.html">Nicolândia</a> |
+            <a href="planetario.html">Planetário</a> |
+            <a href="zoologico.html">Zoológico</a> |
+        </div>
+    <h1 id="title">Planetário de Brasília</h1>
 
-    <h1>Planetário de Brasília</h1>
-
-    <img src="img/img_planet/planetario1.webp" alt="Planetário de Brasília" class="imagem-principal">
+    <img class="imgPlanet" src="img/img_planet/planetario1.webp" alt="Planetário de Brasília" class="imagem-principal">
 
     <p>
 
@@ -30,7 +41,7 @@
 
     </p>
 
-<img src="imagens/planetario2.jpg" alt="Planetário por fora" class="imagem-media">
+<img class="imgPlanet" src="img/img_planet/planetario2.jpg" alt="Planetário por fora" class="imagem-media">
 
     <p>
         Na década de 1990, a programação dava atenção a todo tipo de público. Crianças de 4 a 8 anos assistiam ao
@@ -40,7 +51,7 @@
         década de 1990, a gestão foi transferida da Fundação Cultural para a então Secretaria do Meio Ambiente, Ciência
         e Tecnologia (Sematec).<br>
 
-        <img src="imagens/planetario3.jpeg" alt="Interior do Planetário" class="imagem-pequena">
+        <img src="img/img_planet/planetario3.jpeg" alt="Interior do Planetário" class="imagem-pequena">
 
 
         Após passar por uma reforma para corrigir questões estruturais, o Planetário foi reinaugurado em 11 de dezembro
