adiciona hover e finaliza cabeçalho

--- a/planetario.html
+++ b/planetario.html
@@ -16,7 +16,7 @@
             </div>
             <a href="home.html  ">Início</a> |
             <a href="pontos_turisticos.html">Pontos Turísticos</a> |
-            <a href="contato.html">Contato</a> |
+            <a href="https://ouvidoria.df.gov.br/canal-atendimento-162">Contato</a> |
             <a href="nicolandia.html">Nicolândia</a> |
             <a href="planetario.html">Planetário</a> |
             <a href="zoologico.html">Zoológico</a> |
