redefine index como home page

--- a/nicolandia.html
+++ b/nicolandia.html
@@ -12,7 +12,7 @@
                 <img src="img/brasao-do-distrito-federal.png"
                     alt="logo do Distrito Federal" width="100" height="100">
             </div>
-            <a href="home.html">Início</a> |
+            <a href="index.html">Início</a> |
             <a href="pontos_turisticos.html">Pontos Turísticos</a> |
             <a href="https://ouvidoria.df.gov.br/canal-atendimento-162">Contato</a> |
             <a href="nicolandia.html">Nicolândia</a> |
