--- a/Zoologico/Reptiles.html
+++ b/Zoologico/Reptiles.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seção Repteis</title>
-    <link rel="stylesheet" href="Zoologico/Style.css">
+    <link rel="stylesheet" href="css/ZooStyle.css">
     <link rel="icon" sizes="32x32" href="../img/img_zoologico/ReptileEye2.webp">
 </head>
 <header class="banner">
