adiciona e aprimora header fixo ao zologico e as paginas

--- a/planetario.html
+++ b/planetario.html
@@ -1,67 +1,79 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planetário</title>
-    <link rel="stylesheet" href="css/planetario.css">
-</head>
-
-<body>
-<div id="cabeçalho">
-            <div id="logo">
-                <img src="img/brasao-do-distrito-federal.png"
-                    alt="logo do Distrito Federal" width="100" height="100">
-            </div>
-            <a href="index.html">Início</a> |
-            <a href="pontos_turisticos.html">Pontos Turísticos</a> |
-            <a href="https://ouvidoria.df.gov.br/canal-atendimento-162">Contato</a> |
-            <a href="nicolandia.html">Nicolândia</a> |
-            <a href="planetario.html">Planetário</a> |
-            <a href="zoologico.html">Zoológico</a> |
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Planetário</title>
+        <link rel="stylesheet" href="css/planetario.css">
+    </head>
+    <header id="cabeçalho">
+        <div id="logo">
+            <img src="img/brasao-do-distrito-federal.png"
+                alt="logo do Distrito Federal" width="100" height="100">
         </div>
-    <h1 id="title">Planetário de Brasília</h1>
+        <a href="index.html">Início</a>|
+        <a href="pontos_turisticos.html">Pontos Turísticos</a>|
+        <a href="https://ouvidoria.df.gov.br/canal-atendimento-162">Contato</a>|
+        <a href="nicolandia.html">Nicolândia</a>|
+        <a href="planetario.html">Planetário</a>|
+        <a href="zoologico.html">Zoológico</a>|
+    </header>
+    <body>
+        <h1 id="title">Planetário de Brasília</h1>
 
-    <img class="imgPlanet" src="img/img_planet/planetario1.webp" alt="Planetário de Brasília" class="imagem-principal">
+        <img class="imgPlanet" src="img/img_planet/planetario1.webp"
+            alt="Planetário de Brasília" class="imagem-principal">
 
-    <p>
+        <p>
 
-        O Planetário de Brasília foi inaugurado em 15 de março de 1974. Ao ser inaugurado, o espaço público recebeu o
-        equipamento mais avançado da época, o projetor central astronômico SpaceMaster.<br>
+            O Planetário de Brasília foi inaugurado em 15 de março de 1974. Ao
+            ser inaugurado, o espaço público recebeu o
+            equipamento mais avançado da época, o projetor central astronômico
+            SpaceMaster.<br>
 
-        O prédio foi projetado pelo arquiteto carioca Sérgio Bernardes. Sua estrutura remete à imagem de um disco voador
-        pousado sobre o gramado do Eixo Monumental e foi desenhada com a ideia de unir o céu e o mar. O prédio tem três
-        mil metros quadrados de área construída e fica em um lugar privilegiado: entre a Torre de TV e o Centro de
-        Convenções Ulysses Guimarães.<br>
+            O prédio foi projetado pelo arquiteto carioca Sérgio Bernardes. Sua
+            estrutura remete à imagem de um disco voador
+            pousado sobre o gramado do Eixo Monumental e foi desenhada com a
+            ideia de unir o céu e o mar. O prédio tem três
+            mil metros quadrados de área construída e fica em um lugar
+            privilegiado: entre a Torre de TV e o Centro de
+            Convenções Ulysses Guimarães.<br>
 
+        </p>
 
+        <img class="imgPlanet" src="img/img_planet/planetario2.jpg"
+            alt="Planetário por fora" class="imagem-media">
 
+        <p>
+            Na década de 1990, a programação dava atenção a todo tipo de
+            público. Crianças de 4 a 8 anos assistiam ao
+            Robozinho Blitz e as Estrelas. A garotada de até 12 anos curtia
+            Pedrinho e o vagalume. Adolescentes, jovens e
+            adultos se distraíam com Viagem pelo Sistema Solar e A Terra do
+            Cosmos. O planetário funcionava de terça-feira a
+            domingo, com dias especialmente dedicados a alunos de escolas
+            públicas e particulares do DF. Ainda durante a
+            década de 1990, a gestão foi transferida da Fundação Cultural para a
+            então Secretaria do Meio Ambiente, Ciência
+            e Tecnologia (Sematec).<br>
 
+            <img src="img/img_planet/planetario3.jpeg"
+                alt="Interior do Planetário" class="imagem-pequena">
 
-    </p>
+            Após passar por uma reforma para corrigir questões estruturais, o
+            Planetário foi reinaugurado em 11 de dezembro
+            de 2013. O prédio ainda possui o equipamento de projeção analógico
+            original, o SpaceMaster, e passou a contar
+            também com um novo modelo digital atualizado, o Power Dome VIII, que
+            exibe imagens tridimensionais e imersivas
+            acompanhadas de som de alta definição, cuja fabricação também é da
+            Carl Zeiss. Ao lado das sessões de cúpula, o
+            espaço público também passou a oferecer regularmente para a
+            população exposições e eventos educativos, culturais
+            e científicos ligados à astronomia.
 
-<img class="imgPlanet" src="img/img_planet/planetario2.jpg" alt="Planetário por fora" class="imagem-media">
-
-    <p>
-        Na década de 1990, a programação dava atenção a todo tipo de público. Crianças de 4 a 8 anos assistiam ao
-        Robozinho Blitz e as Estrelas. A garotada de até 12 anos curtia Pedrinho e o vagalume. Adolescentes, jovens e
-        adultos se distraíam com Viagem pelo Sistema Solar e A Terra do Cosmos. O planetário funcionava de terça-feira a
-        domingo, com dias especialmente dedicados a alunos de escolas públicas e particulares do DF. Ainda durante a
-        década de 1990, a gestão foi transferida da Fundação Cultural para a então Secretaria do Meio Ambiente, Ciência
-        e Tecnologia (Sematec).<br>
-
-        <img src="img/img_planet/planetario3.jpeg" alt="Interior do Planetário" class="imagem-pequena">
-
-
-        Após passar por uma reforma para corrigir questões estruturais, o Planetário foi reinaugurado em 11 de dezembro
-        de 2013. O prédio ainda possui o equipamento de projeção analógico original, o SpaceMaster, e passou a contar
-        também com um novo modelo digital atualizado, o Power Dome VIII, que exibe imagens tridimensionais e imersivas
-        acompanhadas de som de alta definição, cuja fabricação também é da Carl Zeiss. Ao lado das sessões de cúpula, o
-        espaço público também passou a oferecer regularmente para a população exposições e eventos educativos, culturais
-        e científicos ligados à astronomia.
-
-    </p>
-</body>
+        </p>
+    </body>
 
 </html>
