--- a/Zoologico.html
+++ b/Zoologico.html
@@ -7,13 +7,21 @@
     <link rel="stylesheet" href="css/ZooStyle.css">
     <link rel="icon" sizes="32x32" href="./img/img_zoologico/ReptileEye2.webp">
 </head>
-<header class="banner">
-  <a href="./Zoologico/Zoologico.html" class="home">Home</a>
-  <a href="https://www.google.com" class="home">Landing Page</a>
-</header>
+<header id="cabeçalho">
+        <div id="logo">
+            <img src="img/brasao-do-distrito-federal.png"
+                alt="logo do Distrito Federal" width="100" height="100">
+        </div>
+        <a href="index.html">Início</a>|
+        <a href="pontos_turisticos.html">Pontos Turísticos</a>|
+        <a href="https://ouvidoria.df.gov.br/canal-atendimento-162">Contato</a>|
+        <a href="nicolandia.html">Nicolândia</a>|
+        <a href="planetario.html">Planetário</a>|
+        <a href="zoologico.html">Zoológico</a>|
+    </header>
 <body class="background">
     <br><br>
-    <h1 class="zoo-title" >Bem Vindo ao Zoologico!</h1>
+    <h1 class="zoo-title" >Zoologico de Brasília</h1>
     <a href="./Zoologico/Aves.html">
         <div class="boxAves">
             <img class="boxImageAves" src="./img/img_zoologico/Hawk.png" alt="">
