--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-de<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
     <head>
         <meta charset="UTF-8">
@@ -7,22 +7,23 @@ de<!DOCTYPE html>
         <link rel="stylesheet" href="css/home.css">
         <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     </head>
-    <body>
-        <div id="cabeçalho">
-            <div id="logo">
-                <img src="img/brasao-do-distrito-federal.png"
-                    alt="logo do Distrito Federal" width="100" height="100">
-            </div>
-            <a href="index.html">Início</a>|
-            <a href="pontos_turisticos.html">Pontos Turísticos</a>|
-            <a href="https://ouvidoria.df.gov.br/canal-atendimento-162">Contato</a>|
-            <a href="nicolandia.html">Nicolândia</a>|
-            <a href="planetario.html">Planetário</a>|
-            <a href="zoologico.html">Zoológico</a>|
+    <header id="cabeçalho">
+        <div id="logo">
+            <img src="img/brasao-do-distrito-federal.png"
+                alt="logo do Distrito Federal" width="100" height="100">
         </div>
+        <a href="index.html">Início</a>|
+        <a href="pontos_turisticos.html">Pontos Turísticos</a>|
+        <a href="https://ouvidoria.df.gov.br/canal-atendimento-162">Contato</a>|
+        <a href="nicolandia.html">Nicolândia</a>|
+        <a href="planetario.html">Planetário</a>|
+        <a href="zoologico.html">Zoológico</a>|
+    </header>
+    <body>
         <div id="pagina-inicial">
             <h1>Bem-vindo ao DF Checkpoints</h1>
             <br>
+            <img id="map-image" src="img/maps image.jpg" alt="maspImage">
             <p>Explore os principais pontos turísticos do Distrito Federal.</p>
         </body>
     </html>
