--- a/nicolandia.html
+++ b/nicolandia.html
@@ -6,20 +6,20 @@
         <title>DF Checkpoints - Nicolândia</title>
         <link rel="stylesheet" href="css/nicolandia.css">
     </head>
-    <body>
-        <div id="cabeçalho">
-            <div id="logo">
-                <img src="img/brasao-do-distrito-federal.png"
-                    alt="logo do Distrito Federal" width="100" height="100">
-            </div>
-            <a href="index.html">Início</a> |
-            <a href="pontos_turisticos.html">Pontos Turísticos</a> |
-            <a href="https://ouvidoria.df.gov.br/canal-atendimento-162">Contato</a> |
-            <a href="nicolandia.html">Nicolândia</a> |
-            <a href="planetario.html">Planetário</a> |
-            <a href="zoologico.html">Zoológico</a> |
+    <header id="cabeçalho">
+        <div id="logo">
+            <img src="img/brasao-do-distrito-federal.png"
+                alt="logo do Distrito Federal" width="100" height="100">
         </div>
-
+        <a href="index.html">Início</a>|
+        <a href="pontos_turisticos.html">Pontos Turísticos</a>|
+        <a href="https://ouvidoria.df.gov.br/canal-atendimento-162">Contato</a>|
+        <a href="nicolandia.html">Nicolândia</a>|
+        <a href="planetario.html">Planetário</a>|
+        <a href="zoologico.html">Zoológico</a>|
+    </header>
+    <body>
+        <!--INTRODUÇÃO-->
         <div class="Bloco" align="center">
             <br>
             <h1 class="Titulo">Nicolândia</h1>
