otimizacao de layout das paginas do zologico e no header

--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
                 alt="logo do Distrito Federal" width="100" height="100">
         </div>
         <a href="index.html">Início</a>|
-        <a href="pontos_turisticos.html">Pontos Turísticos</a>|
-        <a href="https://ouvidoria.df.gov.br/canal-atendimento-162">Contato</a>|
+        <a href="https://ouvidoria.df.gov.br/canal-atendimento-162" target="_blank">Contato</a>|
         <a href="nicolandia.html">Nicolândia</a>|
         <a href="planetario.html">Planetário</a>|
-        <a href="zoologico.html">Zoológico</a>|
+        <a href="zoologico.html">Zoológico</a>
     </header>
     <body>
         <div id="pagina-inicial">
