--- a/planetario.html
+++ b/planetario.html
@@ -13,11 +13,11 @@
                 alt="logo do Distrito Federal" width="100" height="100">
         </div>
         <a href="index.html">Início</a>|
-        <a href="pontos_turisticos.html">Pontos Turísticos</a>|
-        <a href="https://ouvidoria.df.gov.br/canal-atendimento-162">Contato</a>|
+        <a href="https://ouvidoria.df.gov.br/canal-atendimento-162"
+            target="_blank">Contato</a>|
         <a href="nicolandia.html">Nicolândia</a>|
         <a href="planetario.html">Planetário</a>|
-        <a href="zoologico.html">Zoológico</a>|
+        <a href="zoologico.html">Zoológico</a>
     </header>
     <body>
         <h1 id="title">Planetário de Brasília</h1>
@@ -26,12 +26,11 @@
             alt="Planetário de Brasília" class="imagem-principal">
 
         <p>
-
             O Planetário de Brasília foi inaugurado em 15 de março de 1974. Ao
             ser inaugurado, o espaço público recebeu o
             equipamento mais avançado da época, o projetor central astronômico
-            SpaceMaster.<br>
-
+            SpaceMaster.
+            <br>
             O prédio foi projetado pelo arquiteto carioca Sérgio Bernardes. Sua
             estrutura remete à imagem de um disco voador
             pousado sobre o gramado do Eixo Monumental e foi desenhada com a
@@ -39,10 +38,9 @@
             mil metros quadrados de área construída e fica em um lugar
             privilegiado: entre a Torre de TV e o Centro de
             Convenções Ulysses Guimarães.<br>
-
         </p>
 
-        <img class="imgPlanet" src="img/img_planet/planetario2.jpg"
+        <img src="img/img_planet/planetario2.jpg"
             alt="Planetário por fora" class="imagem-media">
 
         <p>
@@ -56,11 +54,13 @@
             públicas e particulares do DF. Ainda durante a
             década de 1990, a gestão foi transferida da Fundação Cultural para a
             então Secretaria do Meio Ambiente, Ciência
-            e Tecnologia (Sematec).<br>
-
+            e Tecnologia (Sematec).
+            <br>
+            <br>
             <img src="img/img_planet/planetario3.jpeg"
                 alt="Interior do Planetário" class="imagem-pequena">
-
+            <br>
+            <br>
             Após passar por uma reforma para corrigir questões estruturais, o
             Planetário foi reinaugurado em 11 de dezembro
             de 2013. O prédio ainda possui o equipamento de projeção analógico
@@ -72,7 +72,6 @@
             espaço público também passou a oferecer regularmente para a
             população exposições e eventos educativos, culturais
             e científicos ligados à astronomia.
-
         </p>
     </body>
 
