--- a/Zoologico.html
+++ b/Zoologico.html
@@ -9,14 +9,15 @@
 </head>
 <header id="cabeçalho">
         <div id="logo">
-            <img src="img/brasao-do-distrito-federal.png"
+            <img src="img/img_home/brasao-do-distrito-federal.png"
                 alt="logo do Distrito Federal" width="100" height="100">
         </div>
         <a href="index.html">Início</a>|
         <a href="https://ouvidoria.df.gov.br/canal-atendimento-162" target="_blank">Contato</a>|
         <a href="nicolandia.html">Nicolândia</a>|
         <a href="planetario.html">Planetário</a>|
-        <a href="zoologico.html">Zoológico</a>
+        <a href="zoologico.html">Zoológico</a>|
+        <a href="catedral.html">Catedral</a>
     </header>
 <body class="background">
     <br><br>
