Mudanças na página da Nicolândia

--- a/nicolandia.html
+++ b/nicolandia.html
@@ -30,28 +30,30 @@
         </div>
 
         <!--PRIMEIRA ATRAÇÃO-->
-
-        <div class="Bloco" align="center">
+        <a href="https://www.youtube.com/watch?v=P3I5rbXh_OM" style="text-decoration: none; color: inherit;">
+        <div class="BlocoAtracao" align="center">
             <img class="Imagens" src="img/img_nicolandia/360.webp"
                 alt="Atração 360" align="left">
             <br>
             <h2 class="Titulo">360</h2>
             É uma grande gangorra giratória, somente para quem tem coragem.<br>
             É o único da américa latina!<br><br><br><br><br><br> </div>
+        </a>
 
         <!--SEGUNDA ATRAÇÃO-->
-
-        <div class="Bloco" align="center">
+        <a href="https://www.youtube.com/watch?v=xMAOnRCMD-M" style="text-decoration: none; color: inherit;">
+        <div class="BlocoAtracao" align="center">
             <img class="Imagens" src="img/img_nicolandia/KABUM.webp"
                 alt="Atração KABUM" align="right">
             <br>
             <h2 class="Titulo">KABUM</h2>
             Nada mais que um elevador de queda livre de 30 metros.<br>
             Seu pesadelo virou realidade!<br><br><br><br><br><br> </div>
+        </a>
 
         <!--TERCEIRA ATRAÇÃO-->
-
-        <div class="Bloco" align="center">
+        <a href="https://www.youtube.com/watch?v=UvDNt08jOV0" style="text-decoration: none; color: inherit;">
+        <div class="BlocoAtracao" align="center">
             <img class="Imagens" src="img/img_nicolandia/SPOOK.webp"
                 alt="Atração SPOOK" align="left">
             <br>
@@ -59,20 +61,22 @@
             Este não é um trem ordinário, é um trem que explora um castelo
             assombrado!<br>
             Nem queira saber o que reside nele...<br><br><br><br><br><br> </div>
+        </a>
 
         <!--QUARTA ATRAÇÃO-->
-
-        <div class="Bloco" align="center">
+        <a href="https://www.youtube.com/watch?v=nibGtR4E5hw" style="text-decoration: none; color: inherit;">
+        <div class="BlocoAtracao" align="center">
             <img class="Imagens" src="img/img_nicolandia/colossus-loop.webp"
                 alt="Atração Colossu's Loop" align="right">
             <br>
             <h2 class="Titulo">Colossu's Loop</h2>
             Uma montanha russa que conta com muita adrenalina e um loop de<br>
             dez metros de altura!<br><br><br><br><br><br> </div>
+        </a>
 
         <!--QUINTA ATRAÇÃO-->
-
-        <div class="Bloco" align="center">
+        <a href="https://www.youtube.com/shorts/SX755fKDSTQ" style="text-decoration: none; color: inherit;">
+        <div class="BlocoAtracao" align="center">
             <img class="Imagens" src="img/img_nicolandia/toboga-noite.webp"
                 alt="Atração Tobogã" align="left">
             <br>
@@ -81,5 +85,6 @@
             tobogã tem 15 metros de altura!
             Os participantes escorregam usando tapetes.<br><br><br><br><br><br>
         </div>
+        </a>
     </body>
 </html>
