atualiza header html

--- a/planetario.html
+++ b/planetario.html
@@ -12,12 +12,25 @@
             <img src="img/img_home/brasao-do-distrito-federal.png"
                 alt="logo do Distrito Federal" width="100" height="100">
         </div>
-        <a href="index.html">Início</a>|
-        <a href="https://ouvidoria.df.gov.br/canal-atendimento-162" target="_blank">Contato</a>|
-        <a href="nicolandia.html">Nicolândia</a>|
-        <a href="planetario.html">Planetário</a>|
-        <a href="zoologico.html">Zoológico</a>|
-        <a href="catedral.html">Catedral</a>
+
+        <input type="checkbox" id="menuFlutuanteCheckbox">
+        <label for="menuFlutuanteCheckbox" id="menu-overlay"></label>
+        <label for="menuFlutuanteCheckbox" id="menuFlutuante">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </label>
+
+        <nav id="linksHeader">
+            <a href="index.html">Início</a>
+            <a href="https://ouvidoria.df.gov.br/canal-atendimento-162"
+                target="_blank">Contato</a>
+            <a href="nicolandia.html">Nicolândia</a>
+            <a href="planetario.html">Planetário</a>
+            <a href="zoologico.html">Zoológico</a>
+            <a href="catedral.html">Catedral</a>
+            <a href="torreTV.html">Torre de TV</a>
+        </nav>
     </header>
     <body>
         <h1 id="title">Planetário de Brasília</h1>
