adiciona taget blank nos links nicolandia

--- a/nicolandia.html
+++ b/nicolandia.html
@@ -44,7 +44,7 @@
         </div>
 
         <!--PRIMEIRA ATRAÇÃO-->
-        <a href="https://www.youtube.com/watch?v=P3I5rbXh_OM" style="text-decoration: none; color: inherit;">
+        <a href="https://www.youtube.com/watch?v=P3I5rbXh_OM" target="_blank" style="text-decoration: none; color: inherit;">
         <div class="BlocoAtracao" align="center">
             <img class="Imagens" src="img/img_nicolandia/360.webp"
                 alt="Atração 360" align="left">
@@ -55,7 +55,7 @@
         </a>
 
         <!--SEGUNDA ATRAÇÃO-->
-        <a href="https://www.youtube.com/watch?v=xMAOnRCMD-M" style="text-decoration: none; color: inherit;">
+        <a href="https://www.youtube.com/watch?v=xMAOnRCMD-M" target="_blank" style="text-decoration: none; color: inherit;">
         <div class="BlocoAtracao" align="center">
             <img class="Imagens" src="img/img_nicolandia/KABUM.webp"
                 alt="Atração KABUM" align="right">
@@ -66,7 +66,7 @@
         </a>
 
         <!--TERCEIRA ATRAÇÃO-->
-        <a href="https://www.youtube.com/watch?v=UvDNt08jOV0" style="text-decoration: none; color: inherit;">
+        <a href="https://www.youtube.com/watch?v=UvDNt08jOV0" target="_blank" style="text-decoration: none; color: inherit;">
         <div class="BlocoAtracao" align="center">
             <img class="Imagens" src="img/img_nicolandia/SPOOK.webp"
                 alt="Atração SPOOK" align="left">
@@ -78,7 +78,7 @@
         </a>
 
         <!--QUARTA ATRAÇÃO-->
-        <a href="https://www.youtube.com/watch?v=nibGtR4E5hw" style="text-decoration: none; color: inherit;">
+        <a href="https://www.youtube.com/watch?v=nibGtR4E5hw" target="_blank" style="text-decoration: none; color: inherit;">
         <div class="BlocoAtracao" align="center">
             <img class="Imagens" src="img/img_nicolandia/colossus-loop.webp"
                 alt="Atração Colossu's Loop" align="right">
@@ -89,7 +89,7 @@
         </a>
 
         <!--QUINTA ATRAÇÃO-->
-        <a href="https://www.youtube.com/shorts/SX755fKDSTQ" style="text-decoration: none; color: inherit;">
+        <a href="https://www.youtube.com/shorts/SX755fKDSTQ" target="_blank" style="text-decoration: none; color: inherit;">
         <div class="BlocoAtracao" align="center">
             <img class="Imagens" src="img/img_nicolandia/toboga-noite.webp"
                 alt="Atração Tobogã" align="left">
