unifica as paginas CSS e apenas um arquivo e corrige tragetoria do arquivo CSS nas paginas HTML

--- a/Zoologico/Anfibios.html
+++ b/Zoologico/Anfibios.html
@@ -1,44 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seção Amfibios</title>
-    <link rel="stylesheet" href="../css/ZooStyle.css">
-    <link rel="icon" sizes="32x32" href="../img/img_zoologico/ReptileEye2.webp">
-</head>
-<header class="banner">
-  <a href="../Zoologico.html" class="home">Home</a>
-</header>
-<body class="background">
-    <h1 class="zoo-title">   Seçao de Amfibios </h1>
-    <div class="BoxStandardLeft">
-        <img class="BoxImageStandard" src="../img/img_zoologico/Axolote.jpg">
-        <p class="BoxStandrdTextLeft">
-            Nome: Axolote (Ambystoma mexicanum)<br>
-            Classe: Amphibia<br>
-            Ordem: Urodela<br>
-            Família: Ambystomatidae<br>
-            - O adulto mede entre 15 a 45 cm. <br>
-            - Diferente da maioria das espécies de salamandra, o Axolote apresenta aspecto da fase juvenil durante toda sua vida, mantendo as guelras e hábito completamente aquático.<br>
-        </p>
-    </div>
-    
-    <div class="BoxStandardRight">
-        <p class="BoxStandrdTextRight">
-            Nome: Salamandra-de-costelas-salientes (Preurodeles waltl)<br>
-            Classe: Amphibia<br>
-            Ordem: Caudata<br>
-            Família: Salamandridae<br>
-            - É uma espécie de anfíbio caudado (ou Urodela) pertencente à família Salamandridae, conhecida pelos nomes comuns de salamandra-de-costelas-salientes, pleurodelo ou salamandra-dos-poços. <br>
-            - É o maior caudado europeu, podendo atingir entre 15 cm e 25 cm, excepcionalmente atingindo os 30 cm. <br>
-            - A sua região de distribuição natural inclui o sul e o oeste da Península Ibérica (ver mapa de distribuição) e a parte ocidental de Marrocos.<br>
-        </p>
-        <img class="BoxImageStandard" src="../img/img_zoologico/Salamandra-de-costelas-salientes.jpeg">
-    </div>
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Seção Anfíbios</title>
+        <link rel="stylesheet" href="../css/style.css">
+        <link rel="icon" sizes="32x32"
+            href="../img/img_zoologico/ReptileEye.webp">
+    </head>
+    <header class="banner">
+        <a href="../Zoologico.html" class="home">Home</a>
+    </header>
+    <body class="background">
+        <h1 class="zoo-title"> Seção de Anfíbios </h1>
+        <div class="BoxStandardLeft">
+            <img class="BoxImageStandard"
+                src="../img/img_zoologico/Axolote.jpg">
+            <p class="BoxStandrdTextLeft">
+                Nome: Axolote (Ambystoma mexicanum)<br>
+                Classe: Amphibia<br>
+                Ordem: Urodela<br>
+                Família: Ambystomatidae<br>
+                - O adulto mede entre 15 a 45 cm. <br>
+                - Diferente da maioria das espécies de salamandra, o Axolote
+                apresenta aspecto da fase juvenil durante toda sua vida,
+                mantendo as guelras e hábito completamente aquático.<br>
+            </p>
+        </div>
 
-</body>
-<footer class="footer">
-    <a href="Zoologico.html" class="home">Home</a>
-</footer>
+        <div class="BoxStandardRight">
+            <p class="BoxStandrdTextRight">
+                Nome: Salamandra-de-costelas-salientes (Preurodeles waltl)<br>
+                Classe: Amphibia<br>
+                Ordem: Caudata<br>
+                Família: Salamandridae<br>
+                - É uma espécie de anfíbio caudado (ou Urodela) pertencente à
+                família Salamandridae, conhecida pelos nomes comuns de
+                salamandra-de-costelas-salientes, pleurodelo ou
+                salamandra-dos-poços. <br>
+                - É o maior caudado europeu, podendo atingir entre 15 cm e 25
+                cm, excepcionalmente atingindo os 30 cm. <br>
+                - A sua região de distribuição natural inclui o sul e o oeste da
+                Península Ibérica (ver mapa de distribuição) e a parte ocidental
+                de Marrocos.<br>
+            </p>
+            <img class="BoxImageStandard"
+                src="../img/img_zoologico/Salamandra-de-costelas-salientes.jpeg">
+        </div>
+
+    </body>
+    <footer class="footer">
+        <a href="Zoologico.html" class="home">Home</a>
+    </footer>
 </html>
