--- a/catedral.html
+++ b/catedral.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>DF Checkpoints</title>
-        <link rel="stylesheet" href="css/home.css">
+        <title>Catedral</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <header id="cabeçalho">
         <div id="logo">
@@ -32,10 +32,10 @@
         </nav>
     </header>
     <body>
-        <div id="pagina-inicial">
+        <div>
             <h1>Catedral Metropolitana de Brasília</h1>
             <br>
-            <img id="map-image" src="img/catedral.jpg"
+            <img id="map-image" src="img/img_catedral/catedral.jpg"
                 alt="Catedral de Brasília" width="600" height="400">
             <p>A Catedral Metropolitana de Brasília, projetada por Oscar
                 Niemeyer, é um ícone da arquitetura moderna e um dos principais
