--- a/planetario.html
+++ b/planetario.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Planetário</title>
-        <link rel="stylesheet" href="css/planetario.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <header id="cabeçalho">
         <div id="logo">
@@ -32,7 +32,7 @@
             <a href="torreTV.html">Torre de TV</a>
         </nav>
     </header>
-    <body>
+    <body id="planetario-body">
         <h1 id="title">Planetário de Brasília</h1>
 
         <img class="imgPlanet" src="img/img_planet/planetario1.webp"
