--- a/nicolandia.html
+++ b/nicolandia.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>DF Checkpoints - Nicolândia</title>
-        <link rel="stylesheet" href="css/nicolandia.css">
+        <title>Nicolândia</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <header id="cabeçalho">
         <div id="logo">
@@ -31,7 +31,7 @@
             <a href="torreTV.html">Torre de TV</a>
         </nav>
     </header>
-    <body>
+    <body id="nicolandia-body">
         <!--INTRODUÇÃO-->
         <div class="Bloco" align="center">
             <br>
@@ -44,61 +44,71 @@
         </div>
 
         <!--PRIMEIRA ATRAÇÃO-->
-        <a href="https://www.youtube.com/watch?v=P3I5rbXh_OM" target="_blank" style="text-decoration: none; color: inherit;">
-        <div class="BlocoAtracao" align="center">
-            <img class="Imagens" src="img/img_nicolandia/360.webp"
-                alt="Atração 360" align="left">
-            <br>
-            <h2 class="Titulo">360</h2>
-            É uma grande gangorra giratória, somente para quem tem coragem.<br>
-            É o único da américa latina!<br><br><br><br><br><br> </div>
+        <a href="https://www.youtube.com/watch?v=P3I5rbXh_OM" target="_blank"
+            style="text-decoration: none; color: inherit;">
+            <div class="BlocoAtracao" align="center">
+                <img class="Imagens" src="img/img_nicolandia/360.webp"
+                    alt="Atração 360" align="left">
+                <br>
+                <h2 class="Titulo">360</h2>
+                É uma grande gangorra giratória, somente para quem tem
+                coragem.<br>
+                É o único da américa latina!<br><br><br><br><br><br> </div>
         </a>
 
         <!--SEGUNDA ATRAÇÃO-->
-        <a href="https://www.youtube.com/watch?v=xMAOnRCMD-M" target="_blank" style="text-decoration: none; color: inherit;">
-        <div class="BlocoAtracao" align="center">
-            <img class="Imagens" src="img/img_nicolandia/KABUM.webp"
-                alt="Atração KABUM" align="right">
-            <br>
-            <h2 class="Titulo">KABUM</h2>
-            Nada mais que um elevador de queda livre de 30 metros.<br>
-            Seu pesadelo virou realidade!<br><br><br><br><br><br> </div>
+        <a href="https://www.youtube.com/watch?v=xMAOnRCMD-M" target="_blank"
+            style="text-decoration: none; color: inherit;">
+            <div class="BlocoAtracao" align="center">
+                <img class="Imagens" src="img/img_nicolandia/KABUM.webp"
+                    alt="Atração KABUM" align="right">
+                <br>
+                <h2 class="Titulo">KABUM</h2>
+                Nada mais que um elevador de queda livre de 30 metros.<br>
+                Seu pesadelo virou realidade!<br><br><br><br><br><br> </div>
         </a>
 
         <!--TERCEIRA ATRAÇÃO-->
-        <a href="https://www.youtube.com/watch?v=UvDNt08jOV0" target="_blank" style="text-decoration: none; color: inherit;">
-        <div class="BlocoAtracao" align="center">
-            <img class="Imagens" src="img/img_nicolandia/SPOOK.webp"
-                alt="Atração SPOOK" align="left">
-            <br>
-            <h2 class="Titulo">SPOOK</h2>
-            Este não é um trem ordinário, é um trem que explora um castelo
-            assombrado!<br>
-            Nem queira saber o que reside nele...<br><br><br><br><br><br> </div>
+        <a href="https://www.youtube.com/watch?v=UvDNt08jOV0" target="_blank"
+            style="text-decoration: none; color: inherit;">
+            <div class="BlocoAtracao" align="center">
+                <img class="Imagens" src="img/img_nicolandia/SPOOK.webp"
+                    alt="Atração SPOOK" align="left">
+                <br>
+                <h2 class="Titulo">SPOOK</h2>
+                Este não é um trem ordinário, é um trem que explora um castelo
+                assombrado!<br>
+                Nem queira saber o que reside nele...<br><br><br><br><br><br>
+            </div>
         </a>
 
         <!--QUARTA ATRAÇÃO-->
-        <a href="https://www.youtube.com/watch?v=nibGtR4E5hw" target="_blank" style="text-decoration: none; color: inherit;">
-        <div class="BlocoAtracao" align="center">
-            <img class="Imagens" src="img/img_nicolandia/colossus-loop.webp"
-                alt="Atração Colossu's Loop" align="right">
-            <br>
-            <h2 class="Titulo">Colossu's Loop</h2>
-            Uma montanha russa que conta com muita adrenalina e um loop de<br>
-            dez metros de altura!<br><br><br><br><br><br> </div>
+        <a href="https://www.youtube.com/watch?v=nibGtR4E5hw" target="_blank"
+            style="text-decoration: none; color: inherit;">
+            <div class="BlocoAtracao" align="center">
+                <img class="Imagens" src="img/img_nicolandia/colossus-loop.webp"
+                    alt="Atração Colossu's Loop" align="right">
+                <br>
+                <h2 class="Titulo">Colossu's Loop</h2>
+                Uma montanha russa que conta com muita adrenalina e um loop
+                de<br>
+                dez metros de altura!<br><br><br><br><br><br> </div>
         </a>
 
         <!--QUINTA ATRAÇÃO-->
-        <a href="https://www.youtube.com/shorts/SX755fKDSTQ" target="_blank" style="text-decoration: none; color: inherit;">
-        <div class="BlocoAtracao" align="center">
-            <img class="Imagens" src="img/img_nicolandia/toboga-noite.webp"
-                alt="Atração Tobogã" align="left">
-            <br>
-            <h2 class="Titulo">Tobogã</h2>
-            Possivelmente a atração mais icônica (e perigosa) da Nicolândia, o
-            tobogã tem 15 metros de altura!
-            Os participantes escorregam usando tapetes.<br><br><br><br><br><br>
-        </div>
+        <a href="https://www.youtube.com/shorts/SX755fKDSTQ" target="_blank"
+            style="text-decoration: none; color: inherit;">
+            <div class="BlocoAtracao" align="center">
+                <img class="Imagens" src="img/img_nicolandia/toboga-noite.webp"
+                    alt="Atração Tobogã" align="left">
+                <br>
+                <h2 class="Titulo">Tobogã</h2>
+                Possivelmente a atração mais icônica (e perigosa) da Nicolândia,
+                o
+                tobogã tem 15 metros de altura!
+                Os participantes escorregam usando
+                tapetes.<br><br><br><br><br><br>
+            </div>
         </a>
     </body>
 </html>
